fix news nav alignment

--- a/wp-content/themes/ecosystem-energy/assets/styles/partials/_news-nav.scss
+++ b/wp-content/themes/ecosystem-energy/assets/styles/partials/_news-nav.scss
@@ -1,5 +1,5 @@
 .news-nav {
-  @include flex(center, space-between);
+  @include flex(flex-start, space-between);
 
   .link {
     width: 50%;
